--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aleksandrababenko91.github.io/Library-aleksandrababenko91",
+  "homepage": "https://aleksandrababenko91.github.io/Library",
   "name": "library",
   "private": true,
   "version": "0.0.0",
@@ -17,10 +17,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "axios": "^1.6.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.3",
     "json-server": "^1.0.0-alpha.23",
     "mdbreact": "^4.6.1",
     "moment": "^2.30.1",
@@ -29,7 +31,8 @@
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
     "react-number-format": "^5.3.3",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
